--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "It will get you the holidays from a country",
   "main": "index.js",
-  "bin": "index.js",
+  "bin": {
+    "holidates": "index.js"
+  },
   "scripts": {
+    "holidates": "node index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
