--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@asunamarie/holidates",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "It will get you the holidays from a country",
   "main": "index.js",
   "bin": {
-    "holidates": "index.js"
+    "@asunamarie/holidates": "index.js"
   },
   "scripts": {
-    "holidates": "node index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
